blog.index view에 post 목록 조회 추가

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Django</h1>
+
+    {% for post in post_list %}
+        <h2>{{ post.title }}</h2>
+        <h4>{{ post.create_at }}</h4>
+        <p>{{ post.content }}</p>
+    {% endfor %}
 </body>
 </html>
