--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,9 +10,17 @@
     <h1>Django</h1>
 
     {% for post in post_list %}
-        <h2>{{ post.title }}</h2>
+        <h2>
+         <a href ="{{ post.get_absolute_url }}"> # 장고 html에서는 ()로 함수 호출 불가
+            {{ post.title }}
+         </a>
+        </h2>
         <h4>{{ post.create_at }}</h4>
         <p>{{ post.content }}</p>
     {% endfor %}
+
+    <hr/>
+
+    <a href="/blog/new/">새 포스팅 쓰기</a>
 </body>
 </html>
