--- a/blog/templates/blog/r_postform.html
+++ b/blog/templates/blog/r_postform.html
@@ -1,12 +1,9 @@
-<h2> 새 포스팅 쓰기 </h2>
+<h2> 새 레스토랑 리뷰 쓰기 </h2>
 
 <form action="" method="post" novalidate>
     {% csrf_token %}
     <table>
         {{ form.as_table }}
     </table>
-    <input type ="submit" />
+    <input type ="submit"/>
 </form>
-
-
-
