템플릿 상속 적용/messages 프레임워크를 적용

--- a/diary/templates/diary/d_postform.html
+++ b/diary/templates/diary/d_postform.html
@@ -1,9 +1,13 @@
+{% extends "diary/base.html" %}
+{% load django_bootstrap5 %}
+
 <h2> 나의 일기 새로 쓰기 </h2>
 
+{% block content %}
 <form action="" method="post" novalidate>
     {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
+    {% bootstrap_form form %}
+
     <input type ="submit"/>
 </form>
+{% endblock %}
