--- a/diary/templates/diary/d_index.html
+++ b/diary/templates/diary/d_index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diary</title>
-</head>
-<body>
-    <h1>Diary</h1>
+{% extends "diary/base.html" %}
 
+{% block content %}
+<ul>
     {% for diary in diarypost_list %}
         <h2>
          <a href ="{{ diary.get_absolute_url }}"> 
@@ -19,13 +12,10 @@
         <h4>등록 일시{{ diary.created_at }}</h4>
         <h5>수정 일시{{ diary.updated_at }}</h5>
         <p>{{ diary.message }}</p>
-
     {% endfor %}
-
+</ul>
     <hr/>
 
     <a href="/diary/new/">오늘의 일기 쓰기 </a>
     
-    
-</body>
-</html>
+{% endblock %}
