--- a/diary/templates/diary/d_single_post_page.html
+++ b/diary/templates/diary/d_single_post_page.html
@@ -19,6 +19,9 @@
 <h3>여기 댓글이 들어올 수 있겠죠? </h3>
 <hr/>
 <a href="/diary/new/">새로운 일기 쓰기</a>
+<a href="/diary/{{ diary_post.pk }}/edit/">edit</a>
+<a href="/diary/{{ diary_post.pk }}/delete/">Delete</a>
 <a href="/diary">일기 목록보기</a>
 </body>
 </html>
+
