django-bootstrap5 라이브러리 활용

--- a/diary/templates/diary/d_postform.html
+++ b/diary/templates/diary/d_postform.html
@@ -8,6 +8,6 @@
     {% csrf_token %}
     {% bootstrap_form form %}
 
-    <input type ="submit"/>
+    <input type ="submit" class="btn btn-primary"/>
 </form>
 {% endblock %}
