--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -11,26 +11,27 @@
 
 </head>
 <body>
+<div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
 
-{% if message %}
-    <ul>
-    {% for message in messages %}
-        <li>
+            <span class="fs-4">Django Diary</span>
+        </a>
 
-        {{ message.tags }}
-        {{ message }}
-        </li>
-    {% endfor %}
-   </ul>
-{% endif %}
-    <h1>Diary</h1>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/blog/" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="/diary/" class="nav-link">Diary</a></li>
+        </ul>
+    </header>
+</div>
+
+<div class="container">
+    {% bootstrap_messages %}
     {% block content %}{% endblock %}
-
-
     <hr/>
     &copy; 2022. Today company.
 
     {% bootstrap_javascript%}
-
+</div>
 </body>
 </html>
