--- a/accounts/templates/accounts/login_form.html
+++ b/accounts/templates/accounts/login_form.html
@@ -1,9 +1,12 @@
+{%  extends "base.html" %}
+{% load django_bootstrap5 %}
+{% block content %}
+
 <h2>login</h2>
 
 <form action="" method="post">
     {% csrf_token %}
-    <table>
-     {{ form.as_table }}
-    </table>
+    {% bootstrap_form form %}
     <input type="submit" value="Login" />
 </form>
+{% endblock %}
