--- a/accounts/templates/accounts/signup_form.html
+++ b/accounts/templates/accounts/signup_form.html
@@ -1,9 +1,11 @@
+{%  extends "base.html" %}
+{% load django_bootstrap5 %}
+{% block content %}
 <h2>Sign up</h2>
 
 <form action="" method="post">
     {% csrf_token %}
-    <table>
-     {{ form.as_table }}
-    </table>
+    {% bootstrap_form form %}
     <input type="submit" value="Signup" />
 </form>
+{% endblock %}
