--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,3 +1,7 @@
+{% extends "blog/base.html" %}
+{% load django_bootstrap5 %}
+
+{% block content %}
 <h2> 새 포스팅 쓰기 </h2>
 
 <form action="" method="post" novalidate>
@@ -8,5 +12,5 @@
     <input type ="submit" />
 </form>
 
-
+{% endblock %}
 
