수정 후 최종

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,8 +1,9 @@
 {% extends "blog/base.html" %}
+
 {% block content %}
     {% for post in post_list %}
         <h2>
-         <a href ="{{ post.get_absolute_url }}"> # 장고 html에서는 ()로 함수 호출 불가
+         <a href ="{{ post.get_absolute_url }}">
             {{ post.title }}
          </a>
         </h2>
